fix: update background color of side panel handle for better visibility

--- a/src/components/common/SidePanel/SidePanel.scss
+++ b/src/components/common/SidePanel/SidePanel.scss
@@ -1,7 +1,7 @@
 .aside-drag {
     &__handle {
         height: 32px;
-        background-color: var(--white-40);
+        background-color: var(--white-60);
         transition: all 0.2s;
     }
 
